--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "socket.io": "^4.7.5",
-    "cors": "^2.8.5"
+    "mongoose": "^9.0.2",
+    "socket.io": "^4.7.5"
   }
 }
